# modorganizer

./: CMakeLists.txt  modorganizer.natvis
src/: CMakeLists.txt  aboutdialog.cpp  appconfig.h  datatab.cpp  datatab.h  directoryentry.cpp  directoryentry.h  directoryrefresher.cpp  directoryrefresher.h  directorystructure.cpp  directorystructure.h  editexecutablesdialog.cpp  envfs.cpp  envfs.h  fileentry.cpp  fileentry.h  fileregister.cpp  fileregister.h  fileregisterfwd.h  filesorigin.cpp  filesorigin.h  filetree.cpp  filetree.h  filetreefwd.h  filetreeitem.cpp  filetreeitem.h  filetreemodel.cpp  filetreemodel.h  filetreeproviders.cpp  filetreeproviders.h  iconfetcher.cpp  installationmanager.cpp  loadmechanism.cpp  main.cpp  mainwindow.cpp  mainwindow.h  modinfo.cpp  modinfo.h  modinfobackup.cpp  modinfobackup.h  (+51 more)
src/shared/: directoryentry.cpp  directoryentry.h  fileentry.cpp  fileentry.h  fileregister.cpp  fileregister.h  fileregisterfwd.h  filesorigin.cpp  filesorigin.h  originconnection.cpp  originconnection.h  util.cpp  util.h
tests/: CMakeLists.txt  directoryentry.cpp  fileentry.cpp  fileregister.cpp  filesorigin.cpp  main.cpp  originconnection.cpp  pch.h  register.cpp
